# ha_fosi_s3

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/fosi_s3/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  media_player.py  number.py  select.py  strings.json
custom_components/fosi_s3/pyfosi/: __init__.py  client.py  models.py
scripts/: sync_pyfosi.sh
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_media_player.py  test_number.py  test_select.py
